--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,42 @@
-appnope==0.1.3
-argcomplete==3.2.2
-asgiref==3.7.2
-asttokens==2.4.1
-beautifulsoup4==4.12.2
-black==24.1.1
-blinker==1.7.0
-bs4==0.0.1
-certifi==2023.11.17
+annotated-types==0.7.0
+anyio==4.6.0
+asgiref==3.8.1
+cachetools==5.5.0
+certifi==2024.8.30
 charset-normalizer==3.3.2
-click==8.1.7
-colorgram.py==1.2.0
-comm==0.2.0
-contourpy==1.2.0
-cycler==0.12.1
-debugpy==1.8.0
-decorator==4.4.2
-Django==5.0.1
-djangorestframework==3.14.0
-environs==11.0.0
-executing==2.0.1
-factory-boy==3.3.0
-Faker==22.1.0
-Flask==3.0.2
-Flask-Cors==4.0.0
-Flask-SQLAlchemy==3.1.1
-fonttools==4.46.0
-idna==3.6
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-iniconfig==2.0.0
-ipykernel==6.27.1
-ipython==8.18.1
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-marshmallow==3.21.1
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-moviepy==1.0.3
-mypy-extensions==1.0.0
-nest-asyncio==1.5.8
-numpy==1.26.2
-packaging==23.2
-pandas==2.1.4
-parso==0.8.3
-pathspec==0.12.1
-pexpect==4.9.0
-Pillow==10.1.0
-pipx==1.4.3
-platformdirs==4.1.0
-pluggy==1.3.0
-proglog==0.1.10
-prompt-toolkit==3.0.41
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.17.2
-pyparsing==3.1.1
-pytest==7.4.4
-pytest-django==4.7.0
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-pytz==2023.3.post1
-pyzmq==25.1.2
-requests==2.31.0
-seaborn==0.13.0
-setuptools==69.2.0
-six==1.16.0
-soupsieve==2.5
-SQLAlchemy==2.0.27
-sqlparse==0.4.4
-stack-data==0.6.3
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.0
-typing_extensions==4.10.0
-tzdata==2023.3
-urllib3==2.1.0
-userpath==1.9.1
-wcwidth==0.2.12
-Werkzeug==3.0.1
-wget==3.2
+distro==1.9.0
+Django==5.1.1
+exceptiongroup==1.2.2
+google-ai-generativelanguage==0.6.10
+google-api-core==2.20.0
+google-api-python-client==2.147.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.2
+googleapis-common-protos==1.65.0
+grpcio==1.66.2
+grpcio-status==1.66.2
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.2
+idna==3.10
+jiter==0.5.0
+openai==1.50.1
+pillow==10.4.0
+proto-plus==1.24.0
+protobuf==5.28.2
+psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyparsing==3.1.4
+requests==2.32.3
+rsa==4.9
+sniffio==1.3.1
+sqlparse==0.5.1
+tqdm==4.66.5
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.3
